docs/.vitepress/theme/scss/docs.scss
@import '../../../../src/lib/components/SdElevation/mixins.scss';

.sd--docs{
  h1, h2, h3, h4, h4 {
    position:relative;
    margin-top: 16px;
    margin-bottom: 24px;
  }

  h1{
    margin-top: 40px;
  }

  // ANCHORS AND LINKS
  a {
    color: var(--primary); 
  }
  
  .header-anchor{
    color: var(--primary);
    font-size: 16px;
    position: absolute;
    left: -16px;
    top: 50%;
    margin-top: -8px;
  }

  hr {
    border: 1px solid var(--divider);
    margin: 32px 0;
  }

  // TABLES
  table {
    th { 
      padding: 16px 8px;
      font-size: 14px;
    }
  
    tr {
      &:nth-child(2n + 1) {
        & > td{
          background-color: var(--background-highlight)
        }
      }
      border-bottom: 1px solid var(--background-highlight);
    }
    td {
      @extend th;
      font-weight: 300;
      &:first-child{
        font-weight: 700;
      }
    }
     
    code:not(pre > code){
      color: var(--secondary-highlight);
    }
  }

  //MKDN NAVIGATION
  .header-anchor{
    color: var(--primary);
    font-size: 16px;
    position: absolute;
    left: -16px;
    top: 50%;
    margin-top: -8px;
  }

  // CODE BLOCKS
  // TODO: split this into fragments to simplify adding other lang types
  .language-html{
    position: relative;
    background-color: var(--background-highlight);
    padding: 32px 16px 8px;
    margin-bottom: 24px;
    border-radius: 6px;
    @include elevation(12);
    &:before{
      content: 'HTML';
      color: var(--text-accent);
      display:inline-block;
      padding: 4px 8px;
      position: absolute;
      top: 0;
      left: 0;
      font-size: 11px;
      background-color: var(--background-accent); 
    }
    &:hover:before{
      color: var(--primary);
      transition: color .3s ease-in-out;
    }
  }
}


// LISTS
li{
  &::marker{
    content: '- ';
  }
}


// PRISM Overides

.token{
  &.tag{
    color: var(--warning-highlight);
  }
  &.attr-name{
    color: var(--secondary-highlight);
  }
  &.attr-value{
    color: var(--text-accent);
  }
  &.punctuation{
    color: var(--text-accent);
  }
}

